@@ -63,6 +63,8 @@ BOOT:
 
 	URING_CONSTANT(FSYNC_DATASYNC);
 
+	URING_CONSTANT(RECVSEND_POLL_FIRST);
+
 	URING_CONSTANT(TIMEOUT_ABS);
 	URING_CONSTANT(TIMEOUT_BOOTTIME);
 	URING_CONSTANT(TIMEOUT_REALTIME);
@@ -72,6 +74,7 @@ BOOT:
 	CONSTANT(RENAME_EXCHANGE);
 	CONSTANT(RENAME_NOREPLACE);
 
+	CONSTANT(AT_SYMLINK_FOLLOW);
 	CONSTANT(AT_REMOVEDIR);
 
 	CONSTANT(P_PID);
